...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="name"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kf-qx-y8W" customClass="RoundBtn" customModule="Cafe_Manager" customModuleProvider="target">
                                        <rect key="frame" x="93.5" y="74.5" width="61" height="38"/>
                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Add +">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="padding">
                                                <real key="value" value="10"/>
                                            </userDefinedRuntimeAttribute>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="hbp-RL-afR" id="BRF-EZ-Sqy"/>
                            <outlet property="delegate" destination="hbp-RL-afR" id="9x3-zz-4rt"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Orders" image="orderTab" id="UPJ-Dg-WxY"/>
                    <navigationItem key="navigationItem" id="8SM-FD-i0q"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="nyb-gU-BWz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="842.02898550724649" y="801.5625"/>
        </scene>
...
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="padding">
                                                        <real key="value" value="7"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <imageView clipsSubviews="YES" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyFood" translatesAutoresizingMaskIntoConstraints="NO" id="DXF-5D-DZy">
                                                <rect key="frame" x="0.0" y="170" width="372.5" height="128"/>
                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="128" id="ry7-je-GdI"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkO-Rs-1mF" customClass="PaddingTextUI" customModule="Cafe_Manager" customModuleProvide
                                                <rect key="frame" x="0.0" y="308" width="372.5" height="36.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="padding">
                                                        <real key="value" value="7"/>
...
                                        <state key="normal" title="Preview">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOw-EL-3Sf">
                                        <rect key="frame" x="143" y="0.0" width="128" height="30"/>
                                        <state key="normal" title="Category">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FqN-GX-R9L">
                                        <rect key="frame" x="286" y="0.0" width="128" height="30"/>
                                        <state key="normal" title="Menu + ">
...
