...
        cell.customerName.text = orderInfo.customerName
        cell.statusContainer.setTitle(StaticInfoManager.statusMeaning [orderInfo.status], for: .normal)
        cell.onOrderSelected = {
            self.onOrderSelected(source: orderInfo)
        }
        if filteredData[indexPath.row].status == 1{
            cell.secondaryButton.setTitle("Accept", for: .normal)
            
            cell.statusContainer.setTitle("Reject", for: .normal)
            cell.buttonContainer.addSubview(cell.statusContainer)
            //cell.statusContainer.tag = (0..<indexPath.section).map({tableView.numberOfRows(inSection: $0)}).reduce(0, +) + indexPath.row
            var index = 0
            cell.statusContainer.tag = orders.firstIndex(where: {
...
